--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html ng-app="gemStore"> <!--Attach module to the HTML-->
 <head>
-  <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+  <meta charset="utf-8" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body ng-controller="StoreController as store">
-  <div class="product row">
+  <div class="product row" ng-repeat="product in store.products">
      <h3>
-       {{store.product.name}}
-       <em class="pull-right">{{store.product.price}}</em>
+       {{product.name}}
+       <em class="pull-right">${{product.price}}</em>
      </h3>
    </div>
 </body>
