--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         </li>
       </ul>
     </div>
+
+    <!-- Tabs -->
+    <section>
+      <ul class="nav nav-pills">
+        <li><a href="">Description</a></li>
+        <li><a href="">Specs</a></li>
+        <li><a href="">Reviews</a></li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
