add click functionality to tabs and assign a value to each tab

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     <!-- Tabs -->
     <section>
       <ul class="nav nav-pills">
-        <li><a href="">Description</a></li>
-        <li><a href="">Specs</a></li>
-        <li><a href="">Reviews</a></li>
+        <li><a href="" ng-click="tab = 1">Description</a></li>
+        <li><a href="" ng-click="tab = 2">Specs</a></li>
+        <li><a href="" ng-click="tab = 3">Reviews</a></li>
       </ul>
+      {{tab}}
     </section>
   </div>
 </body>
