--- a/index.html
+++ b/index.html
@@ -25,14 +25,24 @@
     </div>
 
     <!-- Tabs -->
-    <section ng-init="tab = 1"> <!--Initialize the value of tab to 1 -->
+    <!-- ng-init. Initialize the value of tab to 1 -->
+    <section ng-init="tab = 1">
+      <!-- ng-click. When clicked set the value of tab to given number -->
+      <!-- ng-class. add an active class if the expression evaluates to true -->
       <ul class="nav nav-pills">
-        <li><a href="" ng-click="tab = 1">Description</a></li> <!--When clicked set the value of tab to given number -->
-        <li><a href="" ng-click="tab = 2">Specs</a></li>
-        <li><a href="" ng-click="tab = 3">Reviews</a></li>
+        <li ng-class="{active:tab === 1}">
+          <a href="" ng-click="tab = 1">Description</a>
+        </li>
+        <li ng-class="{active:tab === 2}">
+          <a href="" ng-click="tab = 2">Specs</a>
+        </li>
+        <li ng-class="{active:tab === 3}">
+          <a href="" ng-click="tab = 3">Reviews</a>
+        </li>
       </ul>
       <!-- Panels -->
-      <div class="panel" ng-show="tab === 1"><!-- Show the panel only when it matches the given number -->
+      <!-- ng-show. display the panel only when it matches the given number -->
+      <div class="panel" ng-show="tab === 1">
         <h3>Description</h3>
         <p>{{product.decription}}</p>
       </div>
