--- a/index.html
+++ b/index.html
@@ -25,32 +25,31 @@
     </div>
 
     <!-- Tabs -->
-    <!-- ng-init. Initialize the value of tab to 1 -->
-    <section ng-init="tab = 1">
+    <section ng-controller="PanelController as panel">
       <!-- ng-click. When clicked set the value of tab to given number -->
       <!-- ng-class. add an active class if the expression evaluates to true -->
       <ul class="nav nav-pills">
-        <li ng-class="{active:tab === 1}">
-          <a href="" ng-click="tab = 1">Description</a>
+        <li ng-class="{active:panel.isSelected(1)}">
+          <a href="" ng-click="panel.selectTab(1)">Description</a>
         </li>
-        <li ng-class="{active:tab === 2}">
-          <a href="" ng-click="tab = 2">Specs</a>
+        <li ng-class="{active:panel.isSelected(2)}">
+          <a href="" ng-click="panel.selectTab(2)">Specs</a>
         </li>
-        <li ng-class="{active:tab === 3}">
-          <a href="" ng-click="tab = 3">Reviews</a>
+        <li ng-class="{active:panel.isSelected(3)}">
+          <a href="" ng-click="panel.selectTab(3)">Reviews</a>
         </li>
       </ul>
       <!-- Panels -->
       <!-- ng-show. display the panel only when it matches the given number -->
-      <div class="panel" ng-show="tab === 1">
+      <div class="panel" ng-show="panel.isSelected(1)">
         <h3>Description</h3>
-        <p>{{product.decription}}</p>
+        <p>{{product.description}}</p>
       </div>
-      <div class="panel" ng-show="tab === 2">
+      <div class="panel" ng-show="panel.isSelected(2)">
         <h3>Specs</h3>
         <blockquote>None yet</blockquote>
       </div>
-      <div class="panel" ng-show="tab === 3">
+      <div class="panel" ng-show="panel.isSelected(3)">
         <h3>Reviews</h3>
         <blockquote>None yet</blockquote>
       </div>
