add reviews array and display them on the html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
         <blockquote>None yet</blockquote>
       </div>
     </section>
+
+    <!-- Reviews -->
+    <div>
+      <h4>Reviews</h4>
+      <ul>
+        <li ng-repeat="review in product.reviews">
+          <blockquote>
+            <strong>{{review.stars}} Stars</strong>
+            {{review.body}}
+            <cite class="clearfix">-{{review.author}} on {{review.createdOn | date}}</cite>
+          </blockquote>
+        </li>
+      </ul>
+    </div>
+
   </div>
 </body>
 </html>
