add live preview and dropdown options for select tag

--- a/index.html
+++ b/index.html
@@ -50,25 +50,43 @@
         <blockquote>None yet</blockquote>
       </div>
       <div class="panel" ng-show="panel.isSelected(3)">
-        <h3>Reviews</h3>
-        <blockquote>None yet</blockquote>
-      </div>
-    </section>
-
-    <!-- Reviews -->
-    <div>
-      <h4>Reviews</h4>
+        <h4>Reviews</h4>
       <ul>
         <li ng-repeat="review in product.reviews">
+        <blockquote>
+          <strong>{{review.stars}} Stars</strong>
+          {{review.body}}
+          <cite class="clearfix">-{{review.author}} on {{review.createdOn | date}}</cite>
+        </blockquote>
+      </li>
+    </ul>
+        <!-- Review Form -->
+        <form name="reviewForm" role="form">
+          <!--Live Preview -->
           <blockquote>
             <strong>{{review.stars}} Stars</strong>
             {{review.body}}
-            <cite class="clearfix">-{{review.author}} on {{review.createdOn | date}}</cite>
+            <cite>by {{review.author}}</cite>
           </blockquote>
-        </li>
-      </ul>
-    </div>
-
+          <!-- Actual  Form -->
+          <h4>Submit a Review</h4>
+          <fieldset class="from-group">
+          <select class="form-control" ng-model="review.stars" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" >
+            <option value="">Rate the Product</option>
+          </select>
+        </fieldset>
+        <fieldset class="from-group">
+          <textarea class="form-control" ng-model="review.body" placeholder="Write a short review of the product" title="Review"></textarea>
+        </fieldset>
+        <fieldset class="from-group">
+          <input type="email" class="form-control" ng-model="review.author" placeholder="johnDoe@example.com" title="Email"/>
+        </fieldset>
+        <fieldset class="from-group">
+          <input class="btn btn-primary pull-right" type="submit" value="Submit Review"/>
+        </fieldset>
+        </form>
+      </div>
+    </section>
   </div>
 </body>
 </html>
