--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
       </li>
     </ul>
         <!-- Review Form -->
-        <form name="reviewForm" role="form">
+        <form name="reviewForm" role="form" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(product)">
           <!--Live Preview -->
-          <blockquote>
-            <strong>{{review.stars}} Stars</strong>
-            {{review.body}}
-            <cite>by {{review.author}}</cite>
+          <blockquote ng-show="reviewCtrl.review.stars">
+            <strong>{{reviewCtrl.review.stars}} Stars</strong>
+            {{reviewCtrl.review.body}}
+            <cite>by {{reviewCtrl.review.author}}</cite>
           </blockquote>
           <!-- Actual  Form -->
           <h4>Submit a Review</h4>
           <fieldset class="from-group">
-          <select class="form-control" ng-model="review.stars" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" >
+          <select class="form-control" ng-model="reviewCtrl.review.stars" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" >
             <option value="">Rate the Product</option>
           </select>
         </fieldset>
         <fieldset class="from-group">
-          <textarea class="form-control" ng-model="review.body" placeholder="Write a short review of the product" title="Review"></textarea>
+          <textarea class="form-control" ng-model="reviewCtrl.review.body" placeholder="Write a short review of the product" title="Review"></textarea>
         </fieldset>
         <fieldset class="from-group">
-          <input type="email" class="form-control" ng-model="review.author" placeholder="johnDoe@example.com" title="Email"/>
+          <input type="email" class="form-control" ng-model="reviewCtrl.review.author" placeholder="johnDoe@example.com" title="Email"/>
         </fieldset>
         <fieldset class="from-group">
           <input class="btn btn-primary pull-right" type="submit" value="Submit Review"/>
