--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script type="text/javascript" src="app.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body ng-controller="StoreController as store">
   <!--  Product Container  -->
